Fixed Add Feature Button on Mobile UI

--- a/static/sass/features/features.scss
+++ b/static/sass/features/features.scss
@@ -62,7 +62,6 @@ chromedash-featurelist {
 
 @media only screen and (max-width: 700px) {
   #subheader {
-    margin: $content-padding / 2;
     width: initial;
 
     div.actionlinks {
